--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
         "react-scripts": "2.1.8"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
+        "start": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+        "build": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
@@ -28,6 +28,8 @@
         "not ie <= 11",
         "not op_mini all"
     ],
-    "devDependencies": {
+    "devDependencies": {},
+    "engines": {
+        "node": "16.x"
     }
 }
